fix relative logpath args and test logpath before forking SERVER-1532